@@ -8,6 +8,7 @@ CHANGE LOG
 * New: Show rare weapon properties and weapon range in meters in weapon mouseover.
 * New: Show short range in hit modifier breakdown.
 * Mod: ShortPilotHint now hides HP by default, to avoid line wrapping on elite mechwarriors.
+* Mod: ShowNumericInfo no longer shows pc movement points during enemy attacks.
 * Fix: FacingMarkerEnemyColors not applied when FacingMarkerPlayerColors is empty.
 * Fix: NPE when FacingMarkerPlayerColors is non-empty but FacingMarkerEnemyColors is empty.
 * Fix: FloatingArmorColours no longer applies to target panel.
